welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: not found: value <
    case(true,hour<7) => return true
                  ^parotTrouble:4: error: not found: value >
    case(true,hour>20) => return true
                  ^parotTrouble:6: error: not found: value <
    case(true, 7<hour<20)=> return false
                     ^parotTrouble:6: error: not found: value <
    case(true, 7<hour<20)=> return false
                ^